# mongoose

./: CMakeLists.txt  Makefile  README.md  build.sh  cli.cpp  compile_commands.json  mongoose.c  opt.wasm  pack  side-core-utils.hpp  static-certs.h  test.cpp  testdns.cpp
.github/workflows/: automerge.yml
src/: http.c  tls_wolfssl.c
test/: packed_fs.c
